--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -4,6 +4,7 @@
   <po-menu [p-menus]="menus"></po-menu>
 
   <po-page-default p-title="AppName">
-    <p> AppName page </p>
+    <po-table [p-service-api]="serviceApiProducts" [p-height]="tableHeight"></po-table>
+    <po-table [p-service-api]="serviceApiStock" [p-height]="tableHeight"></po-table>
   </po-page-default>
 </div>
